# ImageConverter

./: .gitignore  CLAUDE.md  FULL_PLAN.md  ImageConverter.bat  PROJECT_SPEC.md  README.md  TODOS.md  TODOS_REAL.md  WINDOWS_SETUP.md  create_windows_shortcut.ps1  pyproject.toml
TemplateDocs/: README.md
src/imageconverter/: __init__.py  cli.py  gui.py
src/imageconverter/core/: config.py  converter.py  processor.py  validator.py
src/imageconverter/utils/: logger.py  metadata.py  paths.py
