[project]
name = "imageconverter"
version = "0.1.0"
description = "Cross-platform batch image conversion tool with CLI and GUI interfaces"
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pillow-heif>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
imageconverter = "imageconverter.gui:main"
imgconvert = "imageconverter.cli:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
